<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/dashboard_title" />
    <item
        android:id="@+id/nav_monitoring"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/monitoring_title" />
    <item
        android:id="@+id/nav_posts"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/posts_title" />
    <item
        android:id="@+id/nav_homework"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/homework_title" />
    <item
        android:id="@+id/nav_connections"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/connections_title" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings_title" />
</menu>

